# Estimation-GRF

./: .gitignore  CMakeLists.txt  README.md
canine-leg/: CMakeLists.txt
canine-leg/canine-leg-left_controller/ControlUtils/include/ControlUtils/: GRFEstimatorETO.hpp  GRFEstimatorMLP.hpp
canine-leg/canine-leg-left_controller/ControlUtils/src/: GRFEstimatorETO.cpp  GRFEstimatorMLP.cpp
canine-leg/canine-leg-left_demo/: CanineLegLeftDataCollect.cpp
canine-leg/canine-leg-left_simulation/src/: SimulContolPanel.cpp  SimulMain.cpp
canine-leg/canine-leg-left_util/: CMakeLists.txt
canine-leg/canine-leg-left_util/include/canine-leg-left_util/: CosTrajectoryGenerator.hpp
canine-leg/canine-leg-left_util/src/: CosTrajectoryGenerator.cpp
canine-leg/canine-leg_GUI/ControlGUI/: ControlGUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
canine-leg/canine-leg_GUI/SimulationGUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
canine-leg/canine-leg_demo/: DataCollector.cpp  DataCollectorSimulation.cpp  GRFTest.cpp  PhysicalWorld.cpp  Simulation.cpp  TorchModelManager.cpp  TorchModelManager.hpp
canine-leg/canine-leg_real/: CMakeLists.txt
canine-leg/canine-leg_real/include/canine-leg_real/: Command.hpp  ControlPanel.hpp  PhysicalWorldMain.hpp  Visualizer.hpp
canine-leg/canine-leg_real/src/: Command.cpp  ControlPanel.cpp  PhysicalWorldMain.cpp  Visualizer.cpp
canine-leg/canine-leg_simulation/: CMakeLists.txt  CanineLegLeftDataCollect.cpp
canine-leg/canine-leg_simulation/include/canine-leg_simulation/: JointPDController.hpp  SimulCommand.hpp  SimulControlPanel.hpp  SimulMain.hpp  SimulVisualizer.hpp
canine-leg/canine-leg_simulation/src/: JointPDController.cpp  SimulCommand.cpp  SimulContolPanel.cpp  SimulMain.cpp  SimulVisualizer.cpp
canine-leg/canine-leg_util/: CMakeLists.txt
canine-leg/canine-leg_util/include/canine-leg_util/: CANMotor.hpp  CosTrajectoryGenerator.hpp  CustomMath.hpp  LoadCell.hpp  SharedMemory.hpp
canine-leg/canine-leg_util/src/: CANMotor.cpp  CosTrajectoryGenerator.cpp  JointPDController.cpp  LoadCell.cpp
datasets/dataPlotter/: CSVtoNPZ.py  NPZtoCSV.py  ProcessedDataPlotter.py
datasets/validation/: GRFDatasets_valid1.csv  GRFDatasets_valid2.csv  GRFDatasets_valid3.csv
model/: Model1.pt  Model1_10.pt  Model2_harsh.pt  Model3_real.pt  Model3_real_2.pt  Model3_real_3.pt  Model4_WD.pt  Model5.pt  Model6_1.pt  Model6_2.pt  Model_Sim2Real_5_cos_1.pt  Model_Sim2Real_5_cubic_cos_1.pt
offlineLearner/: CMakeLists.txt
offlineLearner/RegressionUI/: mainwindow.cpp  mainwindow.h
offlineLearner/TransferLearningUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
rsc/urdf/canine_leg_left/: canine_leg_left.urdf  canine_leg_left_V2.urdf
rsc/urdf/canine_leg_left_v4/: canine_leg_left_v4.urdf
